# CFD_LAB_Parallel

./: .gitlab-ci.yml  boundary_val.cpp  grid.cpp  grid.hpp  init.hpp  main.cpp  parallel.cpp  parallel.hpp  utilities.cpp  utilities.hpp
Ref_Test_Data/: log_P0_after  log_P0_before  log_P1_after  log_P1_before  log_P22  log_U0_after  log_U0_before  log_U1_after  log_U1_before  log_V0_after  log_V0_before  log_V1_after  log_V1_before
tests/: CMakeLists.txt  test_utilities.cpp  test_utilities.hpp  ws1_unit_testing.cpp  ws3_unit_testing.cpp
